--- a/DOM stuff/index(1).html
+++ b/DOM stuff/index(1).html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <input id="searchInput" type="text" placeholder="Name search..." />
+    <input onclick="searchInput" type="text" placeholder="Name search..." />
+    <p><button onclick="loadList()">Names List</button></p>
     <ol id="nameList">
         <!--  -->
     </ol>
@@ -28,6 +29,20 @@
         <hr/>
         <p> The most amazing super-hero team in the history of heroes!</p>
     </div> -->
+   <ul id="nList">
+       <li>Pava</li>
+        <li>Lucian</li>
+        <li>Petru</li>
+        <li>Diana</li>
+        <li>Alex</li>
+        <li>Rucs</li>
+        <li>Florin</li>
+        <li>Culita</li>
+        <li>Alexandru</li>
+        <li>Costel</li>
+        <li>Bobita</li>
+       <li>Bob</li>
+   </ul>
     <script type="text/javascript" src="./dom.js"></script>    
     <style>
         .card {
