--- a/twitter.html
+++ b/twitter.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="Description" content="The Kit Team" />
     <link rel="stylesheet" href="style.css" />
-    <link href="<link href=" https://fonts.googleapis.com/css?family=Fredoka+One " rel="stylesheet ">" </head>
+    <link href="link href=" https://fonts.googleapis.com/css?family=Fredoka+One " rel="stylesheet ">" </head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 </head>
